<resources>
    <string name="app_name">Air Life</string>
    <string name="action_settings">Settings</string>
    <string name="runtime_permissions_txt">Please enable ALL permissions from app settings.</string>


    <string name="alert_title_gps_off">GPS is Turned Off</string>
    <string name="alert_content_gps_off">Please turn on GPS for more accurate data.</string>
    <string name="alert_title_location_access">Allow Location Access</string>
    <string name="alert_content_location_access">Please Allow Location Access to get Air Quality and Weather Information.</string>

    <!--Health Implications-->
    <string name="good_health_implications">Air quality is considered satisfactory, and air pollution poses little or no risk.</string>
    <string name="moderate_health_implications">Air quality is acceptable; however, for some pollutants there may be a moderate health concern for a very small number of people who are unusually sensitive to air pollution.</string>
    <string name="unhealthy_for_sensitive_health_implications">Members of sensitive groups may experience health effects. The general public is not likely to be affected.</string>
    <string name="unhealthy_health_implications">Everyone may begin to experience health effects; members of sensitive groups may experience more serious health effects.</string>
    <string name="very_unhealthy_health_implications">Health warnings of emergency conditions. The entire population is more likely to be affected.</string>
    <string name="hazardous_health_implications">Health alert: everyone may experience more serious health effects.</string>

    <string name="atppwidget_text">AQI</string>

    <!--AQI Range-->
    <string name="good_range">0 – 50</string>
    <string name="moderate_range">51 – 100</string>
    <string name="unhealthy_for_sensitive_range">101 – 150</string>
    <string name="unhealthy_range">151 – 200</string>
    <string name="very_unhealthy_range">201 – 300</string>
    <string name="hazardous_range">300+</string>

    <!--AQI Scale-->
    <string name="good">Good</string>
    <string name="moderate">Moderate</string>
    <string name="unhealthy_for_sensitive">Unhealthy for Sensitive Group</string>
    <string name="unhealthy">Unhealthy</string>
    <string name="very_unhealthy">Very Unhealthy</string>
    <string name="hazardous">Hazardous</string>

    <string name="temperature_unit_celsius">%1$.1f &#176;C</string>
    <string name="humidity_unit">%1$.0f%%</string>
    <string name="pressure_unit">%1$.1f mb</string>
    <string name="wind_unit">%1$.1f m/s</string>

    <string name="temperature_unit_celsius_2">%1$.1f</string>
    <string name="humidity_unit_2">%1$.0f</string>
    <string name="pressure_unit_2">%1$.1f</string>
    <string name="wind_unit_2">%1$.1f</string>

    <string name="place_holder">---</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="attribution">Attributions</string>
    <string name="pollutants_aqi">Pollutants AQI</string>
    <string name="footer">Institute for Telecooperation,\nJKU, Linz</string>
    <string name="quotes">Prevention is better than cure</string>
    <string name="delete">Delete</string>


    <string name="msg_nonetworkconnection">Network not connected!!</string>
    <string name="no_network_connection">No network available!!</string>
    <string name="no_data_found">No data found..</string>
    <string name="fav_loading_msg">Loading air quality for your favourite list...</string>
    <string name="loadingmain">Loading data from nearest station...</string>
    <string name="nolist">No list found..</string>
    <string name="pleasewait">Please wait.. refreshing..</string>
    <string name="languageupdate">Language updated to german</string>
    <string name="loading">Loading Information..Please wait..</string>
    <string name="favTitle">Air Life - Favourite List</string>
    <string name="moreinfoTitle">Air Life - More Details</string>
    <string name="predictionTitle">Air Life - Prediction</string>
    <string name="predictsuccess">Predicted Successfully...</string>

    <string name="are_you_sure_want_to_exit">Are you sure want to exit?</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="informationtitle">Information</string>
</resources>
